worker-macros/tests/ui/fetch-wrong-param-count.stderr
error: custom attribute panicked
 --> tests/ui/fetch-wrong-param-count.rs:3:1
  |
3 | #[event(fetch)]
  | ^^^^^^^^^^^^^^^
  |
  = help: message: the `fetch` handler should be a function with 3 arguments but found 1
